--- a/datahub-web-react/package.json
+++ b/datahub-web-react/package.json
@@ -40,6 +40,7 @@
         "analytics": "^0.8.9",
         "antd": "4.24.7",
         "color-hash": "^2.0.1",
+        "craco-antd": "^1.19.0",
         "cronstrue": "^1.122.0",
         "d3-scale": "^4.0.2",
         "dayjs": "^1.11.7",
@@ -48,11 +49,14 @@
         "dompurify": "^2.3.8",
         "dotenv": "^8.2.0",
         "faker": "5.5.3",
+        "find-webpack": "2.2.1",
         "graphql": "^15.5.0",
         "graphql-tag": "2.10.3",
         "graphql.macro": "^1.4.2",
         "history": "^5.0.0",
+        "i18next": "^23.11.5",
         "js-cookie": "^2.2.1",
+        "miragejs": "^0.1.41",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.35",
         "monaco-editor": "^0.28.1",
@@ -62,8 +66,10 @@
         "react": "^17.0.0",
         "react-color": "^2.19.3",
         "react-dom": "^17.0.0",
+        "react-email-share-link": "^1.0.3",
         "react-helmet-async": "^1.3.0",
         "react-highlighter": "^0.4.3",
+        "react-i18next": "^14.1.2",
         "react-icons": "4.3.1",
         "react-intersection-observer": "^9.5.3",
         "react-js-cron": "^2.1.0",
@@ -73,6 +79,8 @@
         "react-visibility-sensor": "^5.1.1",
         "reactour": "1.18.7",
         "remirror": "^2.0.23",
+        "sinon": "^11.1.1",
+        "start-server-and-test": "1.12.2",
         "styled-components": "^5.2.1",
         "turndown-plugin-gfm": "^1.0.2",
         "typescript": "^4.8.4",
@@ -92,6 +100,12 @@
         "lint-fix": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
         "type-check": "tsc --noEmit",
         "type-watch": "tsc -w --noEmit"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "browserslist": {
         "production": [
